Add own service manager

--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,7 @@
         "symfony/process": "~2.7|~3.0",
         "nategood/httpful": "~0.2",
         "tightenco/collect": "~5.4.0",
-        "sebastian/version": "^2.0",
-        "ext-zip": "*"
+        "sebastian/version": "^2.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
@@ -57,7 +56,8 @@
     ],
     "scripts": {
         "post-install-cmd": [
-            "Valet\\Ngrok::install"
+            "Valet\\Ngrok::install",
+            "Valet\\Mon::install"
         ]
     }
 }
