--- a/mongroup.conf
+++ b/mongroup.conf
@@ -1,1 +1,9 @@
-nginx = nginx -g 'daemon off;'
+nginx = $HOMEBREW_PREFIX/sbin/nginx -g 'daemon off;'
+dnsmasq = $HOMEBREW_PREFIX/sbin/dnsmasq --keep-in-foreground -C $HOMEBREW_PREFIX/etc/dnsmasq.conf
+php-fpm = $HOMEBREW_PREFIX/sbin/php-fpm --nodaemonize
+elasticsearch = $HOMEBREW_PREFIX/sbin/elasticsearch
+mailhog = $HOMEBREW_PREFIX/sbin/mailhog
+mysql = $HOMEBREW_PREFIX/sbin/mysqld_safe --datadir=$HOMEBREW_PREFIX/var/mysql
+mariadb = $HOMEBREW_PREFIX/sbin/mysqld_safe --datadir=$HOMEBREW_PREFIX/var/mysql
+mariadb = PATH=$HOMEBREW_PREFIX/sbin:/usr/sbin:/usr/bin:/bin:$HOMEBREW_PREFIX/bin CONF_ENV_FILE=$HOMEBREW_PREFIX/etc/rabbitmq/rabbitmq-env.conf $HOMEBREW_PREFIX/sbin/rabbitmq-server
+redis = $HOMEBREW_PREFIX/sbin/redis-server $HOMEBREW_PREFIX/etc/redis.conf --daemonize no
