--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
             "email": "j.zelger@techdivision.com"
         },
         {
-            "name": "Oliver La",
+            "name": "Oliver Lazovic",
             "email": "contact@oliver.la"
         }
     ],
