--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "xama5/valet-neutral",
-    "description": "Blazing fast PHP development environment",
+    "description": "Blazing fast PHP development environment for Linux and MacOS",
     "license": "MIT",
     "authors": [
         {
