Rename php-fpm to php in the process manager
There is no brew package called php-fpm, so the check if the package is installed fails and the process is never restarted.

--- a/mongroup.conf
+++ b/mongroup.conf
@@ -1,6 +1,6 @@
 nginx = $HOMEBREW_PREFIX/bin/nginx -g 'daemon off;'
 dnsmasq = $HOMEBREW_PREFIX/sbin/dnsmasq --keep-in-foreground -C $HOMEBREW_PREFIX/etc/dnsmasq.conf
-php-fpm = $HOMEBREW_PREFIX/sbin/php-fpm --nodaemonize
+php = $HOMEBREW_PREFIX/sbin/php-fpm --nodaemonize
 elasticsearch = $HOMEBREW_PREFIX/bin/elasticsearch
 mailhog = $HOMEBREW_PREFIX/bin/MailHog
 mysql = $HOMEBREW_PREFIX/bin/mysqld_safe --datadir=$HOMEBREW_PREFIX/var/mysql
