Run mysql as the current user, since the user mysql doesn't exist

--- a/cli/stubs/my.cnf
+++ b/cli/stubs/my.cnf
@@ -9,6 +9,7 @@ innodb_file_per_table=OFF
 show_compatibility_56=ON
 open_files_limit=999999
 log-error=VALET_HOME_PATH/Log/mysql.log
+pid-file=VALET_HOME_PATH/Pids/mysql.pid
 local_infile=ON
 secure_file_priv=""
 max_allowed_packet=1073741824
@@ -28,5 +29,6 @@ innodb_log_file_size=25M
 interactive_timeout=3600
 max_connect_errors=1000000
 thread_cache_size=1024
+user=VALET_USER
 [mysqld_safe]
 open_files_limit=999999
